--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-core:1.4.3'
     implementation 'androidx.compose.material:material-icons-extended:1.4.3'
 
-
+    implementation "androidx.navigation:navigation-compose:2.6.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
